--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -557,6 +557,7 @@ pre code {
   width: 100%;
   padding-right: 15px;
   padding-left: 15px;
+  padding-top: 25px;
   margin-right: auto;
   margin-left: auto;
 }
