--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,33 @@ body {
      line-height: 1.80857;
      font-weight: normal;
 }
+.blog-post {
+     display: flex;
+     align-items: center;
+     margin-bottom: 20px;
+   }
+
+.blog-image {
+     flex: 0 0 50px;
+     margin-right: 20px;
+     height: 40%;
+     width: 40%;
+}
+
+.blog-description {
+     flex: 1;
+}
+
+.blog-title {
+     font-size: 20px;
+     font-weight: bold;
+     margin-bottom: 10px;
+}
+
+.blog-text {
+     font-size: 16px;
+     color: #fff;
+}
 
 a {
      color: #1f1f1f;
